; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_final.c_final_end_function.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_final.c_final_end_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 (i32, i32)*, i32 (i32)* }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 (i32, i32)* }

@debug_hooks = common dso_local global %struct.TYPE_6__* null, align 8
@high_function_linenum = common dso_local global i32 0, align 4
@targetm = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@asm_out_file = common dso_local global i32 0, align 4
@last_linenum = common dso_local global i32 0, align 4
@last_filename = common dso_local global i32 0, align 4
@DWARF2_DEBUG = common dso_local global i64 0, align 8
@VMS_AND_DWARF2_DEBUG = common dso_local global i64 0, align 8
@write_symbols = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @final_end_function() #0 {
  %1 = call i32 (...) @app_disable()
  %2 = load %struct.TYPE_6__*, %struct.TYPE_6__** @debug_hooks, align 8
  %3 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %2, i32 0, i32 1
  %4 = load i32 (i32)*, i32 (i32)** %3, align 8
  %5 = load i32, i32* @high_function_linenum, align 4
  %6 = call i32 %4(i32 %5)
  %7 = load i32 (i32, i32)*, i32 (i32, i32)** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @targetm, i32 0, i32 0, i32 0), align 8
  %8 = load i32, i32* @asm_out_file, align 4
  %9 = call i32 (...) @get_frame_size()
  %10 = call i32 %7(i32 %8, i32 %9)
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** @debug_hooks, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load i32 (i32, i32)*, i32 (i32, i32)** %12, align 8
  %14 = load i32, i32* @last_linenum, align 4
  %15 = load i32, i32* @last_filename, align 4
  %16 = call i32 %13(i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @app_disable(...) #1

declare dso_local i32 @get_frame_size(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
